--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -310,7 +310,7 @@
             <li class="divider"></li>            
             
             <li>
-        		<a ui-sref="dashboard.manageNotice" style="color: #337AB7;"><i class="fa fa-bookmark fa-fw"></i> งานที่สั่งพิมพ์</a>
+        		<a ui-sref="dashboard.manageNotice" style="color: #337AB7;"><i class="fa fa-file-powerpoint-o fa-fw"></i> งานที่สั่งพิมพ์</a>
             </li>
             <li>
         		<a ui-sref="dashboard.payment.detail2" style="color: #337AB7;"><i class="fa fa-money fa-fw"></i> ข้อมูล Payment</a>
