--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -350,6 +350,9 @@
             <li class="divider" ng-if="group0"></li>
         
         	<li ng-if="group0">
+        		<a ui-sref="dashboard.engTpl" style="color: #337AB7;"><i class="fa fa-file-text fa-fw"></i> Engine's TPL</a>
+            </li>
+        	<li ng-if="group0">
         		<a ui-sref="dashboard.exportTemplate" style="color: #337AB7;"><i class="fa fa-file-text fa-fw"></i> นำเข้าแบบฟอร์ม Export</a>
             </li>
         	<li ng-if="group0">
