--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -56,6 +56,7 @@
     <script src="lib/ui-bootstrap-tpls.min.js"></script>
     <script src="lib/metisMenu.min.js"></script>
     <script src="lib/Chart.min.js"></script>
+    <script src="lib/chartjs-plugin-datalabels.min.js"></script>
     <script src="lib/angular-translate.min.js"></script>    
     <script src="lib/angular-translate-loader-static-files.min.js"></script> 
     <script src="lib/angular-sanitize.min.js"></script>
