--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="styles/sb-admin-2.css" type="text/css">
     <link rel="stylesheet" href="styles/timeline.css" type="text/css">
     <link rel="stylesheet" href="styles/common.css" type="text/css">
+    <link rel="stylesheet" href="styles/checkAnimate.css" type="text/css">
     <link rel="stylesheet" href="lib/css/metisMenu.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/loading-bar.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/font-awesome.min.css" type="text/css">
