--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -401,6 +401,10 @@
             </li>
             <li class="divider" ng-if="group0"></li>
             <li>
+        		<a ui-sref="dashboard.fieldsSetting.list" style="color: #337AB7;"><i class="fa fa-object-group fa-fw"></i> Fields Setting</a>
+            </li>
+            <li class="divider" ng-if="group0"></li>
+            <li>
         		<a ui-sref="dashboard.dymList.list" style="color: #337AB7;"><i class="fa fa-random fa-fw"></i> Dynamic List</a>
             </li>
             <li class="divider"></li>
