--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -126,8 +126,8 @@
 }
 </style>
     </head>
-   
-    <body style="min-width: 1024px;">
+   <body>
+  <!--   <body style="min-width: 1024px;"> -->
 
 	    <div ng-app="sbAdminApp">
 	    	<toaster-container toaster-options="{'close-button': true, 'time-out': 3000, 'animation-class': 'toast-top-center'}"></toaster-container>
