--- a/backend/src/main/webapp/app/scripts/directives/tools_menu/menu.html
+++ b/backend/src/main/webapp/app/scripts/directives/tools_menu/menu.html
@@ -12,7 +12,7 @@
         </div>
         <a ui-sref="{{goto}}">
             <div class="panel-footer">
-                <span class="pull-left">{{comments}}</span>
+                <span class="pull-left"><small>{{comments}}</small></span>
                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                 <div class="clearfix"></div>
             </div>
