--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -400,7 +400,7 @@
         		<a ui-sref="dashboard.dbBackupShow" style="color: #337AB7;"><i class="fa fa-download fa-fw"></i> Download DB Backup</a>
             </li>
             <li class="divider" ng-if="group0"></li>
-            <li>
+            <li ng-if="group0">
         		<a ui-sref="dashboard.fieldsSetting.list" style="color: #337AB7;"><i class="fa fa-object-group fa-fw"></i> Fields Setting</a>
             </li>
             <li class="divider" ng-if="group0"></li>
