--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -26,9 +26,10 @@
 	    	
 			  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
 			  		  style="padding-left: 15px; padding-right: 15px;" ng-if="productsSelect.length > 1">
-			    <span ng-repeat="u in productsSelect | filter : workingOnProduct.id">{{ u.productName }}</span>&nbsp;&nbsp;<span class="caret"></span>
+			    <!-- <span ng-repeat="u in productsSelect | filter : workingOnProduct.id">{{ u.productName }}</span>&nbsp;&nbsp;<span class="caret"></span> -->
+			    <span>{{ workingOnProduct.productName }}</span>&nbsp;&nbsp;<span class="caret"></span>
 			  </button>
-			  <ul class="dropdown-menu" ng-if="productsSelect.length > 1">
+			  <ul class="dropdown-menu" ng-if="productsSelect.length > 1" style="max-height: 531px; overflow: auto;">
 			    <li ng-repeat="u in productsSelect track by $index"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
 			  </ul>
 			</div>
@@ -46,7 +47,7 @@
 	<div class="container-footer-common" ng-init="chatting.tab = 1; chatting.isShow = false;">
 		Copyright © 2017-2018 METACOM Co.,Ltd. All rights reserved.&nbsp;09-4236-3204
 		<div class="pull-right">
-			<i class="fa fa-weixin fw" ng-class="{'blink_me': chatting.isChatBlink}" ng-style="chatting.isChatBlink ? {color: 'rgb(206, 100, 51)'} : {}" ng-click="chatting.chatHide()" style="cursor: pointer;" title="Chatting"></i>&nbsp;
+			<i class="fa fa-weixin fw" ng-hide="workingOnProduct.id == null" ng-class="{'blink_me': chatting.isChatBlink}" ng-style="chatting.isChatBlink ? {color: 'rgb(206, 100, 51)'} : {}" ng-click="chatting.chatHide()" style="cursor: pointer;" title="Chatting"></i>&nbsp;
 			<span>{{ productKey }}</span>
 		</div>
 		<div id="chatbox" ng-include="'./scripts/directives/header/chatting.html'" ng-style="chatting.isShow ? {height: '559px'} : {height: '0px'}"></div>
