--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -47,6 +47,7 @@
     <script src="lib/stomp.min.js"></script>
     <script src="lib/ng-stomp.min.js"></script>
     <script src="lib/ngStorage.min.js"></script>
+    <link rel="stylesheet" href="lib/css/angular-confirm.min.css" type="text/css">
     <!-- endbower -->
     <!-- endbuild -->
     
