--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="lib/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/toaster.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/angular-confirm.min.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/bootstrap-datetimepicker.min.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
@@ -49,6 +50,8 @@
     <script src="lib/ng-stomp.min.js"></script>
     <script src="lib/ngStorage.min.js"></script>
     <script src="lib/angular-confirm.min.js"></script>
+    <script src="lib/moment-with-locales.js"></script>
+    <script src="lib/bootstrap-datetimepicker.min.js"></script>
     
     <!-- endbower -->
     <!-- endbuild -->
