--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -52,6 +52,7 @@
     <script src="lib/angular-confirm.min.js"></script>
     <script src="lib/moment-with-locales.js"></script>
     <script src="lib/bootstrap-datetimepicker.min.js"></script>
+    <script src="lib/angular-dateparser.min.js"></script>
     
     <!-- endbower -->
     <!-- endbuild -->
