--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -30,6 +30,7 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="lib/jquery.min.js"></script>
+    <script src="lib/jquery-ui.min.js"></script>
     <script src="lib/angular.min.js"></script>
     <script src="i18n/angular-locale_th.js"></script>
     <script src="lib/bootstrap.min.js"></script>
@@ -53,6 +54,7 @@
     <script src="lib/moment-with-locales.js"></script>
     <script src="lib/bootstrap-datetimepicker.min.js"></script>
     <script src="lib/angular-dateparser.min.js"></script>
+    <script src="lib/angular-drag-and-drop-lists.min.js"></script>
     
     <!-- endbower -->
     <!-- endbuild -->
