--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="lib/css/toaster.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/angular-confirm.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/bootstrap-datetimepicker.min.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/ng-tags-input.min.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/ng-tags-input.bootstrap.min.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
@@ -55,6 +57,7 @@
     <script src="lib/bootstrap-datetimepicker.min.js"></script>
     <script src="lib/angular-dateparser.min.js"></script>
     <script src="lib/angular-drag-and-drop-lists.min.js"></script>
+    <script src="lib/ng-tags-input.min.js"></script>
     
     <!-- endbower -->
     <!-- endbuild -->
