--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -66,6 +66,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/loginCtrl.js"></script>
         <script src="scripts/services/httpInterceptor.js"></script>
+        <script src="scripts/services/focus.js"></script>
         <script src="js/sb-admin-2.js"></script>
     <!-- endbuild -->
 
