--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="lib/css/bootstrap-datetimepicker.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/ng-tags-input.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/ng-tags-input.bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/animate.min.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
