--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -4,10 +4,10 @@
             <!-- <sidebar-search></sidebar-search> -->
             
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.order"><i class="fa fa-book fa-fw"></i> บันทึกข้อมูลซื้อ</a>
+                <a ui-sref="dashboard.order"><i class="fa fa-book fa-fw"></i> บันทึกข้อมูล</a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.manageOrder"><i class="fa fa-sitemap fa-fw"></i> จัดการข้อมูลซื้อ</a>
+                <a ui-sref="dashboard.manageOrder"><i class="fa fa-sitemap fa-fw"></i> จัดการข้อมูล</a>
             </li>
             
             <li ui-sref-active="active">
