--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" style="color: black; font-weight: 700;">Gambler {{ backendVersion }}</a>
+        <a class="navbar-brand" style="color: #85a985; font-weight: 700; font-style: italic; text-shadow: 1px 1px black;">Gambler {{ backendVersion }}</a>
     </div>
     <!-- /.navbar-header -->
     <header-notification></header-notification>
