--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -11,7 +11,7 @@
             </li>
             
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.setting"><i class="fa fa-cog fa-fw"></i> ตั้งค่า</a>
+                <a ui-sref="dashboard.setting"><i class="fa fa-university fa-fw"></i> ผู้รับ</a>
             </li>
             
             <!-- <li ui-sref-active="active">
