--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -10,7 +10,7 @@
         <a class="navbar-brand" style="color: #85a985; font-weight: 700; font-style: italic; text-shadow: 1px 1px black;">Gambler {{ backendVersion }}</a>
     </div>
     <!-- /.navbar-header -->
-    <header-notification></header-notification>
+    <!-- <header-notification></header-notification> -->
 
     <sidebar></sidebar>
 </nav>
