--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -19,14 +19,14 @@
 		                <a ui-sref="dashboard.receiver"><i class="fa fa-building-o fa-fw"></i> ผู้รับ</a>
 		            </li>
                     <li ui-sref-active="active" ng-hide="$root.workingOnDealer.id">
-		                <a ui-sref="dashboard.dealer"><i class="fa fa-university fa-fw"></i> Dealer</a>
+		                <a ui-sref="dashboard.dealer"><i class="fa fa-university fa-fw"></i> Dealers</a>
 		            </li>
 		            <li ui-sref-active="active">
-		                <a ui-sref="dashboard.user"><i class="fa fa-users fa-fw"></i> User</a>
+		                <a ui-sref="dashboard.user.search"><i class="fa fa-users fa-fw"></i> Users</a>
 		            </li>
-		            <li ui-sref-active="active">
+		            <!-- <li ui-sref-active="active">
 		                <a ui-sref="dashboard.profile"><i class="fa fa-user fa-fw"></i> Profile</a>
-		            </li>
+		            </li> -->
                 </ul>
             </li>
             <li ui-sref-active="active">
