--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -10,9 +10,8 @@
         <a class="navbar-brand" style="color: #85a985; font-weight: 700; font-style: italic; text-shadow: 1px 1px black;">Gambler {{ backendVersion }}</a>
 	
 		<div class="btn-group" style="padding-top: 10px; position: absolute; left: 147px;">
-			<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" style="padding-left: 15px; padding-right: 15px; background-color: #98b799; border-color: #98b799; color: black;" 
-			        ng-if="dealers.length > 1">
-				<span>{{ workingOnDealer.name }}</span>&nbsp;&nbsp;<span class="caret"></span>
+			<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" style="padding-left: 15px; padding-right: 15px; background-color: #98b799; border-color: #98b799; color: black;">
+				<span>{{ workingOnDealer.name }}</span>&nbsp;&nbsp;<span class="caret" ng-if="dealers.length > 1"></span>
 			</button>
 			<ul class="dropdown-menu" ng-if="dealers.length > 1" style="max-height: 531px; overflow: auto;">
 				<li ng-repeat="u in dealers track by $index"><a href="" ng-click="changeDealer(u)">{{ u.name }}</a></li>
