--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -7,10 +7,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" style="color: #85a985; font-weight: 700; font-style: italic; text-shadow: 1px 1px black;">Gambler {{ backendVersion }}</a>
+        <a class="navbar-brand" style="color: #2C2B2B; font-weight: 700; font-style: italic; text-shadow: 1px 1px #bbbaba;">Gambler {{ backendVersion }}</a>
 	
 		<div class="btn-group" style="padding-top: 10px; position: absolute; left: 147px;">
-			<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" style="padding-left: 15px; padding-right: 15px; background-color: #98b799; border-color: #98b799; color: black;">
+			<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" style="padding-left: 15px; padding-right: 15px; 
+					background-color: #525151; border-color: #2c2b2b; color: #cccccc;">
 				<span>{{ workingOnDealer.name }}</span>&nbsp;&nbsp;<span class="caret" ng-if="dealers.length > 1"></span>
 			</button>
 			<ul class="dropdown-menu" ng-if="dealers.length > 1" style="max-height: 531px; overflow: auto;">
