--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -10,8 +10,9 @@
         <a class="navbar-brand" style="color: #2C2B2B; font-weight: 700; font-style: italic; text-shadow: 2px 2px #bbbaba;">Gambler {{ backendVersion }}</a>
 	
 		<div class="btn-group" style="padding-top: 10px; position: absolute; left: 147px;">
-			<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" style="padding-left: 15px; padding-right: 15px; 
-					background-color: #525151; border-color: #2c2b2b; color: #cccccc;">
+			<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" 
+					style="padding-left: 15px; padding-right: 15px; 
+					background-color: #525151; border-color: #2c2b2b; color: #ffd12b; font-weight: 600;">
 				<span>{{ workingOnDealer.name }}</span>&nbsp;&nbsp;<span class="caret" ng-if="dealers.length > 1"></span>
 			</button>
 			<ul class="dropdown-menu" ng-if="dealers.length > 1" style="max-height: 531px; overflow: auto;">
