--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -59,6 +59,7 @@
     <script src="lib/angular-dateparser.min.js"></script>
     <script src="lib/angular-drag-and-drop-lists.min.js"></script>
     <script src="lib/ng-tags-input.min.js"></script>
+    <script src="lib/angular-base64-upload.min.js"></script>
     
     <!-- endbower -->
     <!-- endbuild -->
