--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -78,7 +78,7 @@
 
     </head>
    
-    <body>
+    <body style="background: linear-gradient(0deg, rgb(34 38 40) 0%, rgb(119 163 189) 100%); min-height: 561px;">
 
 	    <div ng-app="sbAdminApp">
 	    	<toaster-container toaster-options="{'close-button': true, 'time-out': 3000, 'animation-class': 'toast-top-center'}"></toaster-container>
