--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0; border-radius: 15px 15px 0 0;
-	background: linear-gradient(0deg, rgb(115 156 181) 0%, rgb(68 84 94) 100%); border-color: #668bb1;">
+<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0;
+	background: linear-gradient(0deg, rgb(115 156 181) 0%, rgb(68 84 94) 100%); border-color: #7798aa;">
 
     <div class="navbar-header">
 
@@ -13,8 +13,8 @@
 	
 		<div class="btn-group" style="padding-top: 10px; position: absolute; left: 147px;">
 			<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" 
-					style="padding-left: 15px; padding-right: 15px; 
-					background-color: #525151; border-color: #2c2b2b; color: #ffd12b; font-weight: 600;">
+					style="padding-left: 15px; padding-right: 15px; border-radius: 15px;
+					background-color: #303f4a; border-color: #9a8104; color: #ffd12b; font-weight: 600;">
 				<span>{{ workingOnDealer.name }}</span>&nbsp;&nbsp;<span class="caret" ng-if="dealers.length > 1"></span>
 			</button>
 			<ul class="dropdown-menu" ng-if="dealers.length > 1" style="max-height: 531px; overflow: auto;">
