--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -1,4 +1,4 @@
-<div class="navbar-default sidebar sidebar-style gambler-sidebar-style" role="navigation" style="background: linear-gradient(0deg, rgb(66 82 91) 0%, rgb(120 164 190) 100%);">
+<div class="navbar-default sidebar sidebar-style gambler-sidebar-style" role="navigation" style="background-color: #ffffff00;">
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav in" id="side-menu">
             <!-- <sidebar-search></sidebar-search> -->
