--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" style="color: #2C2B2B; font-weight: 700; font-style: italic; text-shadow: 2px 2px #bbbaba;">Gambler {{ backendVersion }}</a>
+        <a class="navbar-brand" style="color: #e6c04d; font-weight: 700; font-style: italic; text-shadow: 2px 2px #080808;">Gambler {{ backendVersion }}</a>
 	
 		<div class="btn-group" style="padding-top: 10px; position: absolute; left: 147px;">
 			<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" 
@@ -20,8 +20,12 @@
 			<ul class="dropdown-menu" ng-if="dealers.length > 1" style="max-height: 531px; overflow: auto;">
 				<li ng-repeat="u in dealers track by $index"><a href="" ng-click="changeDealer(u)">{{ u.name }}</a></li>
 			</ul>
+			<label class="btn btn-sm" 
+					style="padding-left: 15px; padding-right: 15px; border-radius: 15px; margin-left: 1px;
+					background-color: #303f4a; border-color: #9a8104; color: #ffd12b; font-weight: 600; cursor: default;">
+				<span>{{ showname }}</span>
+			</label>
 		</div>
-
 
 	</div>
     <!-- /.navbar-header -->
