--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -9,12 +9,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" style="color: #e6c04d; font-weight: 700; font-style: italic; text-shadow: 2px 2px #080808;">Gambler {{ backendVersion }}</a>
+        <a class="navbar-brand" style="color: #dedede; font-weight: 700; font-style: italic; text-shadow: 2px 2px #000000;">Gambler {{ backendVersion }}</a>
 	
 		<div class="btn-group" style="padding-top: 10px; position: absolute; left: 147px;">
 			<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" 
 					style="padding-left: 15px; padding-right: 15px; border-radius: 15px;
-					background-color: #303f4a; border-color: #9a8104; color: #ffd12b; font-weight: 600;">
+					background-color: #303f4a; border-color: #9a9996; color: #c8c8c8; font-weight: 600;">
 				<span>{{ workingOnDealer.name }}</span>&nbsp;&nbsp;<span class="caret" ng-if="dealers.length > 1"></span>
 			</button>
 			<ul class="dropdown-menu" ng-if="dealers.length > 1" style="max-height: 531px; overflow: auto;">
@@ -22,7 +22,7 @@
 			</ul>
 			<label class="btn btn-sm" 
 					style="padding-left: 15px; padding-right: 15px; border-radius: 15px; margin-left: 1px;
-					background-color: #303f4a; border-color: #9a8104; color: #ffd12b; font-weight: 600; cursor: default;">
+					background-color: #303f4a; border-color: #9a9996; color: #c8c8c8; font-weight: 600; cursor: default;">
 				<span>{{ showname }}</span>
 			</label>
 		</div>
