--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -18,6 +18,9 @@
 	                <li ui-sref-active="active" ng-show="$root.workingOnDealer.id">
 		                <a ui-sref="dashboard.receiver"><i class="fa fa-building-o fa-fw"></i> ผู้รับ</a>
 		            </li>
+	                <li ui-sref-active="active" ng-show="$root.workingOnDealer.id">
+		                <a ui-sref="dashboard.priceList"><i class="fa fa-money fa-fw"></i> Price List</a>
+		            </li>		            
                     <li ui-sref-active="active" ng-hide="$root.workingOnDealer.id">
 		                <a ui-sref="dashboard.dealer"><i class="fa fa-university fa-fw"></i> Dealers</a>
 		            </li>
