--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -16,10 +16,13 @@
                 <a href="" ng-click="check(2)"><i class="fa fa-wrench fa-fw"></i> Setting<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level" collapse="collapseVar != 2">
 	                <li ui-sref-active="active" ng-show="$root.workingOnDealer.id">
+		                <a ui-sref="dashboard.customer"><i class="fa fa-user-o fa-fw"></i> ผู้ซื้อ</a>
+		            </li>
+	                <li ui-sref-active="active" ng-show="$root.workingOnDealer.id">
 		                <a ui-sref="dashboard.receiver"><i class="fa fa-building-o fa-fw"></i> ผู้รับ</a>
 		            </li>
 	                <li ui-sref-active="active" ng-show="$root.workingOnDealer.id">
-		                <a ui-sref="dashboard.priceList"><i class="fa fa-money fa-fw"></i> Price List</a>
+		                <a ui-sref="dashboard.priceList"><i class="fa fa-money fa-fw"></i> ราคา</a>
 		            </li>		            
                     <li ui-sref-active="active" ng-hide="$root.workingOnDealer.id">
 		                <a ui-sref="dashboard.dealer"><i class="fa fa-university fa-fw"></i> Dealers</a>
