--- a/backend/src/main/webapp/liff/info.html
+++ b/backend/src/main/webapp/liff/info.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Gambler Info</title>
+<title>Gambler Register</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" href="./../app/lib/css/bootstrap.min.css" />
@@ -21,9 +21,7 @@
 </head>
 <body ng-app="lineInfoApp">
 	<div ng-controller="LineInfoCtrl" style="padding-top: 3px; text-align: center;">
-		<p>
-			<h2 class="badge badge-cus" style="font-size: 30px;">User Information</h2>
-		</p>
+		<br />
 		<img id="pictureUrl" class="img-thumbnail" width="100px" ng-src="{{ lineData.pictureUrl }}">
 		<p>
 			<div class="badge badge-cus" style="text-align: left; padding: 10px;">
