--- a/backend/src/main/webapp/liff/main.html
+++ b/backend/src/main/webapp/liff/main.html
@@ -24,18 +24,11 @@
 <script src="/backend/liff/app.js"></script>
 <script src="/backend/app/scripts/services/httpInterceptor.js"></script>
 <script src="/backend/liff/orderCtrl.js"></script>
+<script src="/backend/liff/showOrder/showOrderCtrl.js"></script>
 </head>
 <body ng-app="sbAdminApp">
-	<div style="padding-top: 3px; text-align: center;">
+	<div style="padding-top: 3px;">
 		<div ui-view></div>
 	</div>
-	
-	<!-- Overlay -->
-	<div id="lps-overlay">
-		<div>
-			<i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
-		</div>
-	</div>
-	<!-- Overlay -->
 </body>
 </html>
