--- a/backend/src/main/webapp/liff/showOrder/main.html
+++ b/backend/src/main/webapp/liff/showOrder/main.html
@@ -1,3 +1,15 @@
+
+<div class="form-group input-group input-group-sm">
+	<span class="input-group-addon">ชุด</span>
+	<select class="form-control" ng-model="formData.orderName" ng-options="option | date:'dd/MM/yyyy HH:mm:ss' for option in createdDateGroup" ng-change="changeOrderName()">
+		<option value="">--ทั้งหมด--</option>
+	</select>
+	<span class="input-group-addon">ชื่อ</span>
+	<select class="form-control" ng-model="formData.orderName" ng-options="option for option in orderNameLst" ng-change="changeOrderName()">
+		<option value="">--ทั้งหมด--</option>
+	</select>
+</div>
+
 <div class="noncopy" style="margin: auto; color: #c1c1c1; padding: 5px 10px 0 10px;">
 	<div>
 		<table class="table table-hover result-panel table-fixed gambler-panel">
