--- a/backend/src/main/webapp/liff/home.html
+++ b/backend/src/main/webapp/liff/home.html
@@ -1,8 +1,8 @@
-<div style="text-align: center;">
+<div style="text-align: center; margin-bottom: 5px;">
 	<span class="badge badge-cus" style="cursor: pointer;" ng-click="goHome()">{{ workingOnDealer.name }} / {{ showname }}</span><br />
 	<span style="color: #c1c1c1;">{{ period.periodDateTime | date:'dd/MM/yyyy' }}</span>
 </div>
-<div ui-view></div>
+<div ui-view style="padding: 0 10px 0 10px;"></div>
 
 <!-- Overlay -->
 <div id="lps-overlay">
