--- a/backend/src/main/webapp/liff/showOrder/main.html
+++ b/backend/src/main/webapp/liff/showOrder/main.html
@@ -8,8 +8,10 @@
 		<option value="">--ทั้งหมด--</option>
 	</select> -->
 </div>
-<p style="color: white; text-align: center;">
-{{ totalPriceSumAll | number:2 }}
+<p style="color: white; text-align: right;">
+	<span class="badge badge-cus">
+		{{ totalPriceSumAll | number:2 }}
+	</span>
 </p>
 <div style="margin: auto; color: #c1c1c1;">
 	<div>
