--- a/backend/src/main/webapp/liff/main.html
+++ b/backend/src/main/webapp/liff/main.html
@@ -26,7 +26,7 @@
 <script src="/backend/liff/orderCtrl.js"></script>
 <script src="/backend/liff/showOrder/showOrderCtrl.js"></script>
 </head>
-<body ng-app="sbAdminApp">
+<body ng-app="sbAdminApp" class="noncopy">
 	<div style="padding-top: 3px;">
 		<div ui-view></div>
 	</div>
