--- a/backend/src/main/webapp/liff/order.html
+++ b/backend/src/main/webapp/liff/order.html
@@ -1,5 +1,5 @@
 <div ui-view>
-	<div class="noncopy" style="text-align: center;">			
+	<div style="text-align: center;">			
 		<div style="margin: auto; width: 100%; margin-bottom: 5px;">
 			<div style="margin: 0;">
 				<div class="form-group input-group input-group-sm">
