--- a/backend/src/main/webapp/liff/showOrder/main.html
+++ b/backend/src/main/webapp/liff/showOrder/main.html
@@ -3,10 +3,10 @@
 	<select class="form-control" ng-model="formData.group" ng-options="option | date:'HH:mm:ss' for option in createdDateGroup" ng-change="refreshData()">
 		<option value="">--ทั้งหมด--</option>
 	</select>
-	<!-- <span class="input-group-addon">ชื่อ</span>
+	<span class="input-group-addon">ชื่อ</span>
 	<select class="form-control" ng-model="formData.name" ng-options="option for option in orderNameLst" ng-change="refreshData()">
 		<option value="">--ทั้งหมด--</option>
-	</select> -->
+	</select>
 </div>
 <p style="color: white; text-align: right;">
 	<span class="badge badge-cus">
