--- a/backend/src/main/webapp/liff/order.html
+++ b/backend/src/main/webapp/liff/order.html
@@ -3,7 +3,7 @@
 		<div style="margin: auto; width: 100%; margin-bottom: 5px;">
 			<div style="margin: 0;">
 				<div class="form-group input-group input-group-sm">
-					<span class="input-group-addon">รูปแบบข้อมูลการพิมพ์</span>
+					<span class="input-group-addon">รูปแบบการพิมพ์</span>
 					<select class="form-control" ng-model="formData.functionId" ng-options="option.id as option.name for option in functions" ng-change="changeFunction()" ng-disabled="orderList.length > 0"></select>
 				</div>
 			</div>
