--- a/backend/src/main/webapp/liff/info.html
+++ b/backend/src/main/webapp/liff/info.html
@@ -6,17 +6,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" href="./../app/lib/css/bootstrap.min.css" />
-<!-- <link rel="stylesheet" href="./../app/lib/css/jquery.mobile-1.4.5.min.css" /> -->
 <link rel="stylesheet" href="./../app/styles/main.css" type="text/css">
 <link rel="stylesheet" href="./../app/lib/css/angular-confirm.min.css" type="text/css">
 <link rel="stylesheet" href="./../app/styles/sb-admin-2.css" type="text/css">
+<link rel="stylesheet" href="./../app/lib/css/font-awesome.min.css" type="text/css">
 <link rel="stylesheet" href="liff.css" type="text/css">
 
 <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 <script src="./../app/lib/jquery.min.js"></script>
-<!-- <script src="./../app/lib/jquery.mobile-1.4.5.min.js"></script> -->
 <script src="./../app/lib/angular.min.js"></script>
 <script src="./../app/lib/angular-confirm.min.js"></script>
+<script src="./../app/lib/angular-base64.min.js"></script>
+<script src="./../app/lib/ngStorage.min.js"></script>
 <script src="infoCtrl.js"></script>
 </head>
 <body ng-app="lineInfoApp">
@@ -26,6 +27,7 @@
 		<p>
 			<div class="badge badge-cus" style="text-align: left; padding: 10px;">
 				<p id="displayName">User Name : {{ lineData.displayName }}</p>
+				<p>Login Status: {{ authenticated ? 'Success' : 'Fail' }}</p>
 				<!-- <p id="userId"><b>UserId : {{ lineData.userId }}</b></p> -->
 				<!-- <p id="statusMessage"><b>StatusMessage: {{ lineData.statusMessage }}</b></p> -->
 				<!-- <p id="getDecodedIDToken"><b>Email : {{ lineData.getDecodedIDToken }}</b></p> -->
@@ -34,11 +36,19 @@
 			</div>
 		</p>
 		<p>
-			<button type="button" class="btn btn-outline btn-warning btn-lg" ng-click="sendBack()">ส่งข้อมูล</button>
+			<button type="button" class="btn btn-outline btn-warning btn-lg" ng-click="sendBack()" ng-hide="authenticated">ส่งข้อมูล</button>
 		</p>
 				
 		
 	</div>
+	
+	<!-- Overlay -->
+	<div id="lps-overlay">
+		<div>
+			<i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
+		</div>
+	</div>
+	<!-- Overlay -->
 </body>
 </html>
 
