--- a/backend/src/main/webapp/liff/order.html
+++ b/backend/src/main/webapp/liff/order.html
@@ -1,6 +1,6 @@
 <div ui-view>
 	<div style="text-align: center;">			
-		<div style="margin: auto; width: 100%; margin-bottom: 5px;">
+		<div style="margin: auto; width: 100%; margin-bottom: 5px;" ng-show="permissionNo == 1">
 			<div style="margin: 0;">
 				<div class="form-group input-group input-group-sm">
 					<span class="input-group-addon">รูปแบบการพิมพ์</span>
