--- a/backend/src/main/webapp/liff/order.html
+++ b/backend/src/main/webapp/liff/order.html
@@ -11,7 +11,7 @@
 					</span>
 				</div>
 				<div style="border: 1px solid #858080; font-size: 2em; overflow: auto; width: 100%; margin: auto;" ng-click="addToList()">
-					<div style="padding-left: 0.2em; font-size: 0.6em; position: absolute;" ng-repeat="pd in predicTypeList | filter:{init: true}">
+					<div style="padding-left: 0.2em; color: #5bc0de; font-size: 0.6em; position: absolute;" ng-repeat="pd in predicTypeList | filter:{init: true}">
 						{{ pd.name }}
 					</div>
 					<div>
