--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -26,7 +26,10 @@
 		            </li>
 	                <li ui-sref-active="active" ng-show="$root.workingOnDealer.id">
 		                <a ui-sref="dashboard.priceList"><i class="fa fa-money fa-fw"></i> ราคา</a>
-		            </li>		            
+		            </li>
+	                <li ui-sref-active="active" ng-show="$root.workingOnDealer.id">
+		                <a ui-sref="dashboard.sendRound"><i class="fa fa-clock-o fa-fw"></i> รอบส่ง</a>
+		            </li>
                     <li ui-sref-active="active" ng-hide="$root.workingOnDealer.id">
 		                <a ui-sref="dashboard.dealer"><i class="fa fa-university fa-fw"></i> Dealers</a>
 		            </li>
