--- a/backend/src/main/webapp/liff/order.html
+++ b/backend/src/main/webapp/liff/order.html
@@ -1,3 +1,9 @@
+<style>
+	#autocompleteCust .dropdown-menu {
+	max-height: 87px;
+	overflow: auto;
+}
+</style>
 <div ui-view>
 	<div style="text-align: center;">
 	      	<div style="margin: auto; color: #c1c1c1;">
