--- a/backend/src/main/webapp/liff/main.html
+++ b/backend/src/main/webapp/liff/main.html
@@ -20,6 +20,7 @@
 <script src="/backend/app/lib/ocLazyLoad.min.js"></script>
 <script src="/backend/app/lib/angular-base64.min.js"></script>
 <script src="/backend/app/lib/ngStorage.min.js"></script>
+<script src="/backend/app/lib/ui-bootstrap-tpls.min.js"></script>
 
 <script src="/backend/liff/app.js"></script>
 <script src="/backend/app/scripts/services/httpInterceptor.js"></script>
