--- a/backend/src/main/webapp/liff/askName.html
+++ b/backend/src/main/webapp/liff/askName.html
@@ -2,7 +2,7 @@
     <div class="form-group" id="autocompleteCust">
     	<label>ชื่อผู้ซื้อ *กรณีไม่ไส่จะใช้ชื่อผู้บันทึกแทน</label>
         <input type="text" class="form-control autocomplete" ng-model="formData.name" 
-        	   uib-typeahead="name for name in names | filter: $viewValue">
+        	   typeahead="name for name in names | filter: $viewValue">
     </div>
 </form>
 <br /><br /><br /><br /><br />
