--- a/backend/src/main/webapp/liff/showOrder/main.html
+++ b/backend/src/main/webapp/liff/showOrder/main.html
@@ -9,7 +9,7 @@
 	</select>
 </div>
 <p style="color: white; text-align: right;">
-	<span class="badge badge-cus" ng-show="sendRoundDateTime">{{ sendRoundMsg }} (ก่อน {{ sendRoundDateTime | date:'HH:mm' }})</span>
+	<span class="badge badge-cus" style="background-color: #f59465" ng-show="sendRoundDateTime">{{ sendRoundMsg }} (ก่อน {{ sendRoundDateTime | date:'HH:mm' }})</span>
 	&nbsp;
 	<span class="badge badge-cus">
 		{{ totalPriceSumAll | number:2 }}
