--- a/backend/src/main/webapp/liff/info.html
+++ b/backend/src/main/webapp/liff/info.html
@@ -37,7 +37,7 @@
 			</div>
 		</p>
 		<p>
-			<button type="button" class="btn btn-outline btn-warning btn-lg" ng-click="sendBack()" ng-show="userNotFoundErr">ส่งข้อมูล</button>
+			<button type="button" class="btn btn-outline btn-warning btn-lg" ng-click="sendBack()" ng-show="userNotFoundErr">ลงทะเบียน</button>
 		</p>
 				
 		
